--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "navody-digital-repository",
   "description": "Used only for the development of GOV.UK Frontend, see `package/package.json` for the published `package.json`",
+  "version": "0.1.8-upstream-sync",
   "engines": {
     "node": "12.13.1"
   },
